* Soporte para Mubi * Pequeñas mejoras al chat

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
 	"app_description": {
-		"message": "Look at the same time with your friends TV series and movies from Netflix, ClaroVideo, Blim, Youtube and Vimeo.",
+		"message": "Look at the same time with your friends TV series and movies from Netflix, ClaroVideo, Blim, Mubi, Youtube and Vimeo.",
 		"description": "Descripción de la extensión"
 	},
 
