--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -1,6 +1,6 @@
 {
 	"app_description": {
-		"message": "Mira al mismo tiempo con tus amigos series y películas de Netflix, ClaroVideo, Blim, Youtube y Vimeo.",
+		"message": "Mira al mismo tiempo con tus amigos series y películas de Netflix, ClaroVideo, Blim, Mubi, Youtube y Vimeo.",
 		"description": "Descripción de la extensión"
 	},
 
