--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -1,6 +1,6 @@
 {
 	"app_description": {
-		"message": "Olhe ao mesmo tempo com a sua série de amigos e filmes do Netflix, ClaroVideo, Blim, Youtube e Vimeo.",
+		"message": "Olhe ao mesmo tempo com a sua série de amigos e filmes do Netflix, ClaroVideo, Blim, Mubi, Youtube e Vimeo.",
 		"description": "Descripción de la extensión"
 	},
 
